<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentVersions"
    android:background="@color/background"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sdk_version"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/tvSdkVersions"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="@color/text_dark"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/service_version"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/tvServiceVersions"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="@color/text_dark"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/hardware_accessory_version"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/tvHwAccessoryVersion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="@color/text_dark"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/algorithm_version"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/tvAlgorithmVersion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="@color/text_dark"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/firmware_version"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/tvFwVersion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="@color/text_dark"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/hardware_version"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/tvHwVersion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="@color/text_dark"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/serial_number"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/tvSerialNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="@color/text_dark"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/scan_count"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/tvScanCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="@color/text_dark"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

        </LinearLayout>


    </LinearLayout>

</FrameLayout>