<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragMore"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:padding="10dp"
            android:background="@drawable/text_input_bg"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/scan_speed"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <SeekBar
                    android:id="@+id/scanSpeedSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:thumb="@drawable/seekbar_thumb"
                    android:progressBackgroundTint="@color/disable"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:splitTrack="true"
                    android:thumbOffset="0dp"
                    android:elevation="4dp"
                    android:rotation="00"
                    android:progressTint="@color/text_dark"
                    android:max="3"
                    android:layout_marginHorizontal="31.5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="bottom">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="1dp"
                            android:layout_height="10dp"
                            android:background="@color/enable"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/low"
                            android:textSize="10sp"
                            android:textColor="@color/enable"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="1dp"
                            android:layout_height="10dp"
                            android:background="@color/enable"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mid"
                            android:textSize="10sp"
                            android:textColor="@color/enable"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="1dp"
                            android:layout_height="10dp"
                            android:background="@color/enable"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/high"
                            android:textSize="10sp"
                            android:textColor="@color/enable"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="1dp"
                            android:layout_height="10dp"
                            android:background="@color/enable"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ultra_high"
                            android:textSize="10sp"
                            android:textColor="@color/enable"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/text_input_bg"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp">
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/text_input_bg"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp">
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>