<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMeasure"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/measure"
                android:background="@drawable/scan_disable"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginVertical="20dp"
                android:enabled="false"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tester"
                    style="@style/TextInputField"
                    app:boxStrokeColor="@color/disable"
                    android:textColorHint="@color/disable"
                    app:boxBackgroundColor="@color/text_light">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTester"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_dark"
                        android:maxLength="20"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/btnTesterClear"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/clear"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="10dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tire_id"
                    style="@style/TextInputField"
                    app:boxStrokeColor="@color/disable"
                    android:textColorHint="@color/disable"
                    app:boxBackgroundColor="@color/text_light"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTire"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_dark"
                        android:maxLength="10"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/btnTireClear"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/clear"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="10dp"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/lytPlnger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/lytDepth"
                android:layout_marginVertical="5dp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plunger_32nds"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lytHeadings"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_dark"
                    android:layout_marginVertical="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tvInnerPlunger"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:gravity="center"
                            android:textColor="@color/text_dark"
                            android:textStyle="bold"/>
                        <SeekBar
                            android:id="@+id/seekBarInner"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:thumb="@drawable/seekbar_thumb"
                            android:progressBackgroundTint="@color/disable"
                            android:paddingStart="0dp"
                            android:paddingEnd="0dp"
                            android:splitTrack="false"
                            android:thumbOffset="0dp"
                            android:elevation="4dp"
                            android:rotation="90"
                            android:progressTint="@color/text_dark"
                            android:max="20"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tvCenterPlunger"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:gravity="center"
                            android:textColor="@color/text_dark"
                            android:textStyle="bold"/>
                        <SeekBar
                            android:id="@+id/seekBarCenter"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:thumb="@drawable/seekbar_thumb"
                            android:progressBackgroundTint="@color/disable"
                            android:paddingStart="0dp"
                            android:paddingEnd="0dp"
                            android:splitTrack="false"
                            android:thumbOffset="0dp"
                            android:elevation="4dp"
                            android:rotation="90"
                            android:progressTint="@color/text_dark"
                            android:max="20"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tvOuterPlunger"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:gravity="center"
                            android:textColor="@color/text_dark"
                            android:textStyle="bold"/>
                        <SeekBar
                            android:id="@+id/seekBarOuter"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:thumb="@drawable/seekbar_thumb"
                            android:progressBackgroundTint="@color/disable"
                            android:paddingStart="0dp"
                            android:paddingEnd="0dp"
                            android:splitTrack="false"
                            android:thumbOffset="0dp"
                            android:elevation="4dp"
                            android:rotation="90"
                            android:progressTint="@color/text_dark"
                            android:max="20"/>
                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>



            <ImageView
                android:id="@+id/btnBackDrop"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/slide_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lytConfidence"
                android:layout_gravity="center"/>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/lytScanData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone">
            <include layout="@layout/scan_item"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lytTestData"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        android:layout_marginTop="?attr/actionBarSize"
        app:behavior_skipCollapsed="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/bottom_sheet_behavior"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lytHeadings"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:background="@color/text_light"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/inner"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_dark"
                    android:layout_marginHorizontal="5dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/center"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_dark"
                    android:layout_marginHorizontal="5dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/outer"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_dark"
                    android:layout_marginHorizontal="5dp"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvScanData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/scan_item"
                android:overScrollMode="never"/>

        </LinearLayout>




    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>